--- a/TManeger/package.json
+++ b/TManeger/package.json
@@ -2,7 +2,6 @@
    "name": "TManeger",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
-   "type": "commonjs",
    "devDependencies": {
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
@@ -13,10 +12,11 @@
       "express": "^4.18.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
+      "ts-node-dev": "^2.0.0",
       "typeorm": "0.3.17"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "start": "ts-node-dev app.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
