--- a/TManeger/package.json
+++ b/TManeger/package.json
@@ -4,16 +4,18 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/node": "^16.11.10",
+      "@types/uuid": "^9.0.5",
       "ts-node": "10.7.0",
       "typescript": "^4.5.2"
    },
    "dependencies": {
       "@types/express": "^4.17.19",
       "express": "^4.18.2",
-      "pg": "^8.4.0",
+      "pg": "^8.11.3",
       "reflect-metadata": "^0.1.13",
       "ts-node-dev": "^2.0.0",
-      "typeorm": "0.3.17"
+      "typeorm": "^0.3.17",
+      "uuid": "^9.0.1"
    },
    "scripts": {
       "start": "ts-node-dev app.ts",
