--- a/TManeger/ormconfig.json
+++ b/TManeger/ormconfig.json
@@ -12,7 +12,7 @@
     "subscribers": ["src/subscriber/*.ts"],
     "cli": {
       "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
+      "migrationsDir": "./src/migration",
       "subscribersDir": "src/subscriber"
     }
   }
