--- a/TManeger/ormconfig.json
+++ b/TManeger/ormconfig.json
@@ -7,7 +7,7 @@
     "database": "Tmaneger",
     "synchronize": false,
     "logging": true,
-    "entities": ["src/entity/*.ts"],
+    "entities": ["./src/entity/*.ts"],
     "migrations": ["src/migration/*.ts"],
     "subscribers": ["src/subscriber/*.ts"],
     "cli": {
